Fixed a bug and added encounter

--- a/campaign/characters/non-player/img/index.html
+++ b/campaign/characters/non-player/img/index.html
@@ -376,6 +376,11 @@
      </a>
     </li>
     <li>
+     <a href="riven_darkwire.jpg">
+      riven darkwire.jpg
+     </a>
+    </li>
+    <li>
      <a href="roderick_thornfield.jpg">
       roderick thornfield.jpg
      </a>
@@ -453,6 +458,11 @@
     <li>
      <a href="valen_shadowborn.jpg">
       valen shadowborn.jpg
+     </a>
+    </li>
+    <li>
+     <a href="vespera_shadowspir.jpg">
+      vespera shadowspir.jpg
      </a>
     </li>
     <li>
