--- a/campaign/characters/non-player/index.html
+++ b/campaign/characters/non-player/index.html
@@ -982,6 +982,13 @@
      </a>
     </li>
     <li>
+     <a class="image-index-link" href="img/riven_darkwire.jpg">
+      <i class="fas fa-camera">
+      </i>
+      img/riven_darkwire.jpg
+     </a>
+    </li>
+    <li>
      <a class="image-index-link" href="img/roderick_thornfield.jpg">
       <i class="fas fa-camera">
       </i>
@@ -1091,6 +1098,13 @@
       <i class="fas fa-camera">
       </i>
       img/valen_shadowborn.jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/vespera_shadowspir.jpg">
+      <i class="fas fa-camera">
+      </i>
+      img/vespera_shadowspir.jpg
      </a>
     </li>
     <li>
