--- a/campaign/characters/non-player/vespera_shadowspir.html
+++ b/campaign/characters/non-player/vespera_shadowspir.html
@@ -3,9 +3,9 @@
  <head>
   <meta charset="utf-8"/>
   <title>
-   title
+   vespera shadowspir
   </title>
-  <link href="../css/mmorpdnd.css" rel="stylesheet"/>
+  <link href="../../../css/mmorpdnd.css" rel="stylesheet"/>
   <!-- JavaScript to handle navigation buttons -->
   <script crossorigin="anonymous" src="https://kit.fontawesome.com/f3aa8d5630.js">
   </script>
@@ -24,6 +24,28 @@
   </script>
  </head>
  <body>
+  <div class="navigation">
+   <a href="#" onclick="history.back(); return false;">
+    <i class="fas fa-arrow-left">
+    </i>
+    Back
+   </a>
+   <a href="./index.html">
+    <i class="fas fa-home">
+    </i>
+    Home
+   </a>
+   <a href="../index.html">
+    <i class="fas fa-level-up-alt">
+    </i>
+    Up
+   </a>
+   <a href="#" onclick="history.forward(); return false;">
+    <i class="fas fa-arrow-right">
+    </i>
+    Forward
+   </a>
+  </div>
   <!-- Top section for character information -->
   <div class="container">
    <div>
@@ -284,7 +306,8 @@
        Deception (Cha)
       </td>
       <td class="proficient">
-       <i class="fas fa-check"></i>
+       <i class="fas fa-check">
+       </i>
       </td>
       <td class="ability-modifier">
        +5
@@ -383,7 +406,8 @@
        Persuasion (Cha)
       </td>
       <td class="proficient">
-       <i class="fas fa-check"></i>
+       <i class="fas fa-check">
+       </i>
       </td>
       <td class="ability-modifier">
        +5
@@ -405,7 +429,8 @@
        Sleight of Hand (Dex)
       </td>
       <td class="proficient">
-       <i class="fas fa-check"></i>
+       <i class="fas fa-check">
+       </i>
       </td>
       <td class="ability-modifier">
        +4
@@ -443,7 +468,12 @@
     Abilities, Spells, and Actions
    </h3>
    <ul>
-    <li><strong>font of magic, metamagic (subtle spell):</strong> [font of magic, metamagic (subtle spell) description]</li>
+    <li>
+     <strong>
+      font of magic, metamagic (subtle spell):
+     </strong>
+     [font of magic, metamagic (subtle spell) description]
+    </li>
    </ul>
   </div>
   <hr/>
@@ -453,7 +483,12 @@
     Equipment
    </h3>
    <ul>
-    <li><strong>a fine set of clothes, a disguise kit, a set of weighted dice, and a pouch containing 15 gold pieces:</strong> [a fine set of clothes, a disguise kit, a set of weighted dice, and a pouch containing 15 gold pieces description]</li>
+    <li>
+     <strong>
+      a fine set of clothes, a disguise kit, a set of weighted dice, and a pouch containing 15 gold pieces:
+     </strong>
+     [a fine set of clothes, a disguise kit, a set of weighted dice, and a pouch containing 15 gold pieces description]
+    </li>
    </ul>
   </div>
   <hr/>
@@ -463,7 +498,13 @@
     Background Information
    </h3>
    <p class="first-paragraph">
-    Vespera Shadowspire is a level 3 Tiefling sorcerer and a cunning member of the Council of Shadows. With her natural talent for manipulating magic and her charismatic demeanor, she plays a pivotal role in the Council's schemes. Vespera's ability to cast spells subtly with her Metamagic enhances her deceptive prowess, making her a master of manipulating perceptions and bending situations to her advantage. Her Abyssal heritage is evident in her infernal appearance, complete with small horns, sharp teeth, and striking crimson eyes. Raised in the underbelly of Matella, she perfected her skills in the arts of deception and illusion, easily blending in with crowds and misdirecting attention away from the Council's activities. Vespera's proficiency in Deception, Sleight of Hand, and Persuasion, along with her disguise kit and mastery of illusion spells, allows her to seamlessly infiltrate and gather information. As a chaotic neutral force within the Council, Vespera's unpredictability and skill set make her a valuable asset, using her magic to sow chaos and confusion among those who oppose the Council's shadowy objectives.
+    Vespera Shadowspire is a level 3 Tiefling sorcerer and a cunning member of
+    <a href="../../lore/guilds/The_Council_of_Shadows.html">
+     The Council of Shadows
+    </a>
+    . With her natural talent for manipulating magic and her charismatic demeanor, she plays a pivotal role in the Council's schemes. Vespera's ability to cast spells subtly with her Metamagic enhances her deceptive prowess, making her a master of manipulating perceptions and bending situations to her advantage. Her Abyssal heritage is evident in her infernal appearance, complete with small horns, sharp teeth, and striking crimson eyes. Raised in the underbelly of
+    <a href="../../locations/regions/Matella/Matella.html">
+     Matella</a>, she perfected her skills in the arts of deception and illusion, easily blending in with crowds and misdirecting attention away from the Council's activities. Vespera's proficiency in Deception, Sleight of Hand, and Persuasion, along with her disguise kit and mastery of illusion spells, allows her to seamlessly infiltrate and gather information. As a chaotic neutral force within the Council, Vespera's unpredictability and skill set make her a valuable asset, using her magic to sow chaos and confusion among those who oppose the Council's shadowy objectives.
    </p>
   </div>
   <hr/>
