--- a/campaign/encounters/img/index.html
+++ b/campaign/encounters/img/index.html
@@ -4,7 +4,7 @@
   <title>
    index
   </title>
-  <link href="../../css/mmorpdnd.css" rel="stylesheet"/>
+  <link href="../../../css/mmorpdnd.css" rel="stylesheet"/>
   <!-- JavaScript to handle navigation buttons -->
   <script crossorigin="anonymous" src="https://kit.fontawesome.com/f3aa8d5630.js">
   </script>
@@ -46,41 +46,28 @@
    </a>
   </div>
   <h1>
-   Index of /home/awtorode/git/DnD/campaign/encounters
+   Index of /home/awtorode/git/DnD/campaign/encounters/img
   </h1>
   <div class="indexLinks">
    <ul>
     <li>
-     <a href="The_Curse_Of_Bedo_The_Frog.html">
-      The Curse Of Bedo The Frog
+     <a href="Bedo_The_Frog (1).jpg">
+      Bedo The Frog (1).jpg
      </a>
     </li>
     <li>
-     <a class="image-index-link" href="img/Bedo_The_Frog (1).jpg">
-      <i class="fas fa-camera">
-      </i>
-      img/Bedo_The_Frog (1).jpg
+     <a href="Bedo_The_Frog (2).jpg">
+      Bedo The Frog (2).jpg
      </a>
     </li>
     <li>
-     <a class="image-index-link" href="img/Bedo_The_Frog (2).jpg">
-      <i class="fas fa-camera">
-      </i>
-      img/Bedo_The_Frog (2).jpg
+     <a href="Bedo_The_Frog (3).jpg">
+      Bedo The Frog (3).jpg
      </a>
     </li>
     <li>
-     <a class="image-index-link" href="img/Bedo_The_Frog (3).jpg">
-      <i class="fas fa-camera">
-      </i>
-      img/Bedo_The_Frog (3).jpg
-     </a>
-    </li>
-    <li>
-     <a class="image-index-link" href="img/Bedo_The_Frog (4).jpg">
-      <i class="fas fa-camera">
-      </i>
-      img/Bedo_The_Frog (4).jpg
+     <a href="Bedo_The_Frog (4).jpg">
+      Bedo The Frog (4).jpg
      </a>
     </li>
    </ul>
