Updating some files

--- a/campaign/creatures/monsters/Umbradraconis_Brastryx.html
+++ b/campaign/creatures/monsters/Umbradraconis_Brastryx.html
@@ -59,15 +59,21 @@
    <p>
     <div class="dnd-image-info">
      <div class="dnd-image-list">
-      <a href="img/Umbradraconis_Brastryx.jpg">
-       <img alt="Image" src="img/Umbradraconis_Brastryx.jpg"/>
+      <a href="img/Umbradraconis_Brastryx (1).jpg">
+       <img alt="Image" src="img/Umbradraconis_Brastryx (1).jpg"/>
+      </a>
+      <a href="img/Umbradraconis_Brastryx (2).jpg">
+       <img alt="Image" src="img/Umbradraconis_Brastryx (2).jpg"/>
+      </a>
+      <a href="img/Umbradraconis_Brastryx (3).jpg">
+       <img alt="Image" src="img/Umbradraconis_Brastryx (3).jpg"/>
       </a>
      </div>
      <div class="dnd-image-source">
       Source: Created by Bing AI image generator
      </div>
      <div class="dnd-image-caption">
-      Caption: Umbradraconis Brastryx.
+      Caption: Some variations on the Umbradraconis Brastryx.
      </div>
     </div>
    </p>
