--- a/campaign/creatures/monsters/img/index.html
+++ b/campaign/creatures/monsters/img/index.html
@@ -51,6 +51,21 @@
   <div class="indexLinks">
    <ul>
     <li>
+     <a href="Umbradraconis_Brastryx (1).jpg">
+      Umbradraconis Brastryx (1).jpg
+     </a>
+    </li>
+    <li>
+     <a href="Umbradraconis_Brastryx (2).jpg">
+      Umbradraconis Brastryx (2).jpg
+     </a>
+    </li>
+    <li>
+     <a href="Umbradraconis_Brastryx (3).jpg">
+      Umbradraconis Brastryx (3).jpg
+     </a>
+    </li>
+    <li>
      <a href="stoneshaper_golem.jpg">
       stoneshaper golem.jpg
      </a>
