--- a/campaign/creatures/monsters/index.html
+++ b/campaign/creatures/monsters/index.html
@@ -61,6 +61,27 @@
      </a>
     </li>
     <li>
+     <a class="image-index-link" href="img/Umbradraconis_Brastryx (1).jpg">
+      <i class="fas fa-camera">
+      </i>
+      img/Umbradraconis_Brastryx (1).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/Umbradraconis_Brastryx (2).jpg">
+      <i class="fas fa-camera">
+      </i>
+      img/Umbradraconis_Brastryx (2).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/Umbradraconis_Brastryx (3).jpg">
+      <i class="fas fa-camera">
+      </i>
+      img/Umbradraconis_Brastryx (3).jpg
+     </a>
+    </li>
+    <li>
      <a class="image-index-link" href="img/stoneshaper_golem.jpg">
       <i class="fas fa-camera">
       </i>
