--- a/campaign/lore/factions/Orbit.html
+++ b/campaign/lore/factions/Orbit.html
@@ -65,7 +65,10 @@
   <hr/>
   <div class="dnd-info">
    <h3>
-    Orbit Public Cover Story
+    <a href="Orbit_public.html">
+     Orbit public
+    </a>
+    Cover Story
    </h3>
    <p class="first-paragraph">
     In the public eye, Orbit is known as a cutting-edge consultancy and security firm, specializing in risk management, strategic planning, and private investigations. The company boasts a team of experts with diverse skill sets, offering services such as corporate security, event planning, and crisis management. Orbit is renowned for its discretion and efficiency, making it a sought-after partner for businesses and individuals alike.
