--- a/campaign/notes/engage_system.html
+++ b/campaign/notes/engage_system.html
@@ -88,7 +88,7 @@
    </h3>
    <p>
     <table>
-     <tr>
+     <tr class="top-row">
       <td>
        Point Cost
       </td>
@@ -101,7 +101,15 @@
        10
       </td>
       <td>
-       1 character level (for characters level 1-10)
+       1 character level (for characters level 1-7)
+      </td>
+     </tr>
+     <tr>
+      <td>
+       15
+      </td>
+      <td>
+       1 character level (for characters level 8-14)
       </td>
      </tr>
      <tr>
@@ -109,7 +117,7 @@
        20
       </td>
       <td>
-       1 character level (for characters level 11+)
+       1 character level (for characters level 15+)
       </td>
      </tr>
      <tr>
@@ -150,6 +158,94 @@
       </td>
       <td>
        1 new skill proficiency
+      </td>
+     </tr>
+     <tr>
+      <td>
+       12
+      </td>
+      <td>
+       Crafting a basic item
+      </td>
+     </tr>
+     <tr>
+      <td>
+       18
+      </td>
+      <td>
+       Crafting a masterwork item
+      </td>
+     </tr>
+     <tr>
+      <td>
+       10
+      </td>
+      <td>
+       Researching new spells or abilities
+      </td>
+     </tr>
+     <tr>
+      <td>
+       8
+      </td>
+      <td>
+       Building a relationship with an NPC
+      </td>
+     </tr>
+     <tr>
+      <td>
+       10
+      </td>
+      <td>
+       Training with a skilled instructor
+      </td>
+     </tr>
+     <tr>
+      <td>
+       12
+      </td>
+      <td>
+       Exploring uncharted territories
+      </td>
+     </tr>
+     <tr>
+      <td>
+       10
+      </td>
+      <td>
+       Starting a small business venture
+      </td>
+     </tr>
+     <tr>
+      <td>
+       6
+      </td>
+      <td>
+       Immersing in a new culture
+      </td>
+     </tr>
+     <tr>
+      <td>
+       10
+      </td>
+      <td>
+       Pursuing a personal quest
+      </td>
+     </tr>
+     <tr>
+      <td>
+       6
+      </td>
+      <td>
+       Rest and relaxation
+      </td>
+     </tr>
+     <tr>
+      <td>
+       1
+      </td>
+      <td>
+       1 gold piece.
       </td>
      </tr>
     </table>
