--- a/campaign/quests/tinker_zepplin_sabotage/tinker_zepplin_sabotage.html
+++ b/campaign/quests/tinker_zepplin_sabotage/tinker_zepplin_sabotage.html
@@ -57,6 +57,20 @@
     Summary
    </h3>
    <p class="first-paragraph">
+    As the grand zeppelin station of the
+    <a href="../../lore/guilds/Tinkers Guild.html">
+     Tinkers Guild
+    </a>
+    is being installed on the outskirts of the bustling city of [City Name], a sense of anticipation fills the air. Amidst this flurry of activity, the city officials have commissioned the inaugural zeppelin ride to retrieve materials of great importance from a distant and inaccessible location. Tasked with this crucial mission are a band of adventurers renowned for their courage and resourcefulness. Their mission is clear: board the zeppelin, embark on a journey to the remote location, retrieve the undisclosed materials, and return them safely to the city. However, time is of the essence, and the city has spared no expense in expediting the launch of the zeppelin, skipping the customary tests and procedures to ensure a swift departure.
+   </p>
+   <p>
+    Yet, unbeknownst to them, dark forces are potentially at work. As the zeppelin soars through the clouds, subtle signs of sabotage begin to surface. Before beginning the voyage, shiny components and vital mechanisms lie scattered throughout the vessel, tempting the adventurers with their allure. Should they succumb to the temptation and tamper with these mysterious objects, they risk triggering a chain reaction of catastrophic events. Alternatively, if the adventurers refrain from meddling with the suspicious items, a sinister presence lurks among them. A shadowy figure, disguised amidst the passengers, seeks to disrupt the journey by covertly tampering with essential components, unaware of the dire consequences their actions will unleash.
+   </p>
+   <p>
+    Midway through the voyage, disaster strikes. The zeppelin shudders and groans as systems fail and alarms blare, signaling imminent danger. With the vessel descending into chaos, the adventurers must spring into action, their skills and ingenuity put to the ultimate test. From repairing damaged engines to stabilizing the faltering hull, the adventurers must work together to overcome each obstacle standing in their way. With time ticking away and the fate of the zeppelin hanging in the balance, they must uncover the source of the sabotage and neutralize the threat before it's too late.
+   </p>
+   <p>
+    As the adventurers race against the clock to restore the zeppelin to working order, they'll confront a series of challenges that will test their resolve and camaraderie. Will they uncover the truth behind the sabotage and secure the vital materials for the city's prosperity, or will their journey end in disaster? The fate of the zeppelin and the success of their mission lie in their hands as they navigate the treacherous skies and confront the forces of darkness that seek to thwart their quest.
    </p>
   </div>
   <hr/>
