--- a/campaign/encounters/img/index.html
+++ b/campaign/encounters/img/index.html
@@ -70,6 +70,11 @@
       Bedo The Frog (4).jpg
      </a>
     </li>
+    <li>
+     <a href="goro_pin_pad.png">
+      goro pin pad.png
+     </a>
+    </li>
    </ul>
   </div>
  </body>
