--- a/campaign/encounters/index.html
+++ b/campaign/encounters/index.html
@@ -56,6 +56,11 @@
      </a>
     </li>
     <li>
+     <a href="The_Emporium_of_Goro.html">
+      The Emporium of Goro
+     </a>
+    </li>
+    <li>
      <a class="image-index-link" href="img/Bedo_The_Frog (1).jpg">
       <i class="fas fa-camera">
       </i>
@@ -81,6 +86,13 @@
       <i class="fas fa-camera">
       </i>
       img/Bedo_The_Frog (4).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/goro_pin_pad.png">
+      <i class="fas fa-camera">
+      </i>
+      img/goro_pin_pad.png
      </a>
     </li>
    </ul>
