--- a/campaign/notes/index.html
+++ b/campaign/notes/index.html
@@ -76,13 +76,28 @@
      </a>
     </li>
     <li>
+     <a href="engage_system_public.html">
+      engage system public
+     </a>
+    </li>
+    <li>
      <a href="orbit_system.html">
       orbit system
      </a>
     </li>
     <li>
+     <a href="orbit_system_public.html">
+      orbit system public
+     </a>
+    </li>
+    <li>
      <a href="profit_system.html">
       profit system
+     </a>
+    </li>
+    <li>
+     <a href="profit_system_public.html">
+      profit system public
      </a>
     </li>
     <li>
