--- a/campaign/notes/orbit_system.html
+++ b/campaign/notes/orbit_system.html
@@ -63,7 +63,7 @@
     One-shots, Risky Business, and Intriguing Tasks (O.R.B.I.T) is a system meticulously crafted to enhance the Dungeon Master's ability to run engaging campaigns in a flexible and dynamic manner. Tailored for Dungeons and Dragons (or other RPG) sessions, O.R.B.I.T. revolves around the idea of encapsulating complete adventures within a single session while seamlessly weaving an overarching narrative of covert operations, daring risks, and mysterious tasks.
    </p>
    <p>
-    Designed with the ever-changing availability of players in mind, O.R.B.I.T. allows for a revolving cast of characters, making it ideal for those seeking episodic gameplay with diverse and flexible party compositions. The acronym captures the essence of the campaign system: One-shots represent the self-contained missions or adventures. Risky Business involves the diverse array of financial and downtime activities and Intriguing Tasks form the backbone of an unfolding narrative that keeps players hooked and invested. In the game world, this system is embodied by the company Operations, Risky Business, and Intriguing Tasks, commonly known as
+    Designed with the ever-changing availability of players in mind, O.R.B.I.T. allows for a revolving cast of characters, making it ideal for those seeking episodic gameplay with diverse and flexible party compositions. The acronym captures the essence of the campaign system: One-shots represent the self-contained missions or adventures. Risky Business involves the diverse array of financial and downtime activities for character development. Intriguing Tasks form the backbone of an unfolding narrative that keeps players hooked and invested. In the game world, this system is embodied by the company Operations, Risky Business, and Intriguing Tasks, commonly known as
     <a href="../lore/factions/Orbit.html">
      Orbit
     </a>
@@ -101,7 +101,7 @@
     <a href="../lore/factions/Orbit.html">
      Orbit
     </a>
-    operatives engage in usualy life as well as some focused downtime activities to enhance their skills, manage their finances, and expand their inventory.
+    operatives engage in usual life as well as some focused downtime activities to enhance their skills, manage their finances, and expand their inventory.
    </p>
    <h4>
     Training for Advancement
@@ -121,7 +121,7 @@
     Financial Endeavors
    </h4>
    <p class="subsection">
-    The players (throught usual life activities) engage in various financial endeavors during downtime, including working regular jobs, making wise investments, or even taking calculated risks such as gambling. The outcomes directly affect the operatives' financial standing, influencing their resources for future missions. The
+    The players (through usual life activities) engage in various financial endeavors during downtime, including working regular jobs, making wise investments, or even taking calculated risks such as gambling. The outcomes directly affect the operatives' financial standing, influencing their resources for future missions. The
     <a href="../lore/factions/Orbit.html">
      Orbit
     </a>
