--- a/campaign/notes/stockpile/index.html
+++ b/campaign/notes/stockpile/index.html
@@ -56,6 +56,16 @@
      </a>
     </li>
     <li>
+     <a href="stockpile_inventory_lists_public.html">
+      stockpile inventory lists public
+     </a>
+    </li>
+    <li>
+     <a href="stockpile_master.html">
+      stockpile master
+     </a>
+    </li>
+    <li>
      <a class="dir-index-link" href="plots/index.html">
       <i class="fas fa-folder">
       </i>
