--- a/index.html
+++ b/index.html
@@ -56,6 +56,11 @@
      </a>
     </li>
     <li>
+     <a href="templatesSorin_Embercloak.html">
+      templatesSorin Embercloak
+     </a>
+    </li>
+    <li>
      <a class="dir-index-link" href=".git/index.html">
       <i class="fas fa-folder">
       </i>
@@ -67,13 +72,6 @@
       <i class="fas fa-folder">
       </i>
       .github
-     </a>
-    </li>
-    <li>
-     <a class="dir-index-link" href=".idea/index.html">
-      <i class="fas fa-folder">
-      </i>
-      .idea
      </a>
     </li>
     <li>
@@ -95,13 +93,6 @@
       <i class="fas fa-folder">
       </i>
       docs
-     </a>
-    </li>
-    <li>
-     <a class="dir-index-link" href="music/index.html">
-      <i class="fas fa-folder">
-      </i>
-      music
      </a>
     </li>
     <li>
