Fixing bug and updating some files

--- a/campaign/characters/non-player/img/index.html
+++ b/campaign/characters/non-player/img/index.html
@@ -421,6 +421,11 @@
      </a>
     </li>
     <li>
+     <a href="sorinembercloak.jpg">
+      sorinembercloak.jpg
+     </a>
+    </li>
+    <li>
      <a href="telburn_himreich.jpg">
       telburn himreich.jpg
      </a>
