--- a/campaign/characters/non-player/index.html
+++ b/campaign/characters/non-player/index.html
@@ -421,6 +421,11 @@
      </a>
     </li>
     <li>
+     <a href="sorin_embercloak.html">
+      sorin embercloak
+     </a>
+    </li>
+    <li>
      <a href="telburn_himreich.html">
       telburn himreich
      </a>
@@ -1042,6 +1047,13 @@
       <i class="fas fa-camera">
       </i>
       img/silas_shadowvale.jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/sorinembercloak.jpg">
+      <i class="fas fa-camera">
+      </i>
+      img/sorinembercloak.jpg
      </a>
     </li>
     <li>
