--- a/campaign/creatures/animals/index.html
+++ b/campaign/creatures/animals/index.html
@@ -61,6 +61,11 @@
      </a>
     </li>
     <li>
+     <a href="Lumina_Panthers.html">
+      Lumina Panthers
+     </a>
+    </li>
+    <li>
      <a href="Mossback_Treant.html">
       Mossback Treant
      </a>
