--- a/campaign/notes/orbit_system_public.html
+++ b/campaign/notes/orbit_system_public.html
@@ -26,10 +26,7 @@
 <body>
 <div class="dnd-header">
 <h1>
-<a href="../lore/factions/Orbit_public.html">
-     Orbit
-    </a>
-    system
+    orbit system
    </h1>
 </div>
 <hr/>
