--- a/campaign/quests/Zaubergrube_Arena.html
+++ b/campaign/quests/Zaubergrube_Arena.html
@@ -58,7 +58,7 @@
    </h3>
    <p class="first-paragraph">
     In the current age, a powerful and enigmatic wizard known as Reno the Relicoligist has unveiled the hidden
-    <a href="../locations/landmarks/Zaubergrube_Caldera.html">
+    <a href="../locations/landmarks/Zaubergrube_Caldera/Zaubergrube_Caldera.html">
      Zaubergrube Caldera
     </a>
     to the world, transforming it into a treacherous arena where survival is the ultimate prize. This mystical haven, once a sanctuary from evil, now serves as the backdrop for an otherworldly game orchestrated by Reno for the entertainment of the elite.
@@ -85,10 +85,7 @@
     Reno's Extravagant Audience
    </h4>
    <p class="subsection">
-    The cruel spectacle doesn't unfold in secrecy
-   </p>
-   <p class="first-paragraph">
-    instead, Reno transforms the arena into a grand spectacle for the enjoyment of extremely rich and powerful elites. Using magical sentry orbs, these spectators witness the battles unfold, placing bets on contestants and relishing the thrill of danger from a safe distance.
+    The cruel spectacle doesn't unfold in secrecy. Instead, Reno transforms the arena into a grand spectacle for the enjoyment of extremely rich and powerful elites. Using magical sentry orbs, these spectators witness the battles unfold, placing bets on contestants and relishing the thrill of danger from a safe distance.
    </p>
    <h4>
     Fortunes and Power
@@ -101,7 +98,7 @@
    </h4>
    <p class="subsection">
     As contestants strive for survival within the
-    <a href="../locations/landmarks/Zaubergrube_Caldera.html">
+    <a href="../locations/landmarks/Zaubergrube_Caldera/Zaubergrube_Caldera.html">
      Zaubergrube Caldera</a>, the illusionary arena leaves a dark imprint on the world. The tales of the Relicoligist's deadly games echo through the ages, a haunting legacy that intertwines with the ancient lore of the Caldera itself. The sanctuary-turned-arena stands as a testament to the ever-shifting nature of power, entertainment, and the perilous dance between them.
    </p>
   </div>
