--- a/campaign/notes/orbit_system.html
+++ b/campaign/notes/orbit_system.html
@@ -48,10 +48,7 @@
   </div>
   <div class="dnd-header">
    <h1>
-    <a href="../lore/factions/Orbit.html">
-     Orbit
-    </a>
-    system
+    orbit system
    </h1>
   </div>
   <hr/>
