Updated some arena files

--- a/campaign/quests/index.html
+++ b/campaign/quests/index.html
@@ -51,11 +51,6 @@
   <div class="indexLinks">
    <ul>
     <li>
-     <a href="Zaubergrube_Arena.html">
-      Zaubergrube Arena
-     </a>
-    </li>
-    <li>
      <a class="dir-index-link" href="manastorm_legal_advisors/index.html">
       <i class="fas fa-folder">
       </i>
@@ -67,6 +62,13 @@
       <i class="fas fa-folder">
       </i>
       tinker zepplin sabotage
+     </a>
+    </li>
+    <li>
+     <a class="dir-index-link" href="zaubergrube_arena/index.html">
+      <i class="fas fa-folder">
+      </i>
+      zaubergrube arena
      </a>
     </li>
    </ul>
