--- a/campaign/quests/zaubergrube_arena/Zaubergrube_Arena.html
+++ b/campaign/quests/zaubergrube_arena/Zaubergrube_Arena.html
@@ -5,7 +5,7 @@
   <title>
    Zaubergrube Arena
   </title>
-  <link href="../../css/mmorpdnd.css" rel="stylesheet"/>
+  <link href="../../../css/mmorpdnd.css" rel="stylesheet"/>
   <!-- JavaScript to handle navigation buttons -->
   <script crossorigin="anonymous" src="https://kit.fontawesome.com/f3aa8d5630.js">
   </script>
@@ -58,10 +58,10 @@
    </h3>
    <p class="first-paragraph">
     In the current age, a powerful and enigmatic wizard known as Reno the Relicoligist has unveiled the hidden
-    <a href="../locations/landmarks/Zaubergrube_Caldera/Zaubergrube_Caldera.html">
+    <a href="../../locations/landmarks/Zaubergrube_Caldera/Zaubergrube_Caldera.html">
      Zaubergrube Caldera
     </a>
-    to the world, transforming it into a treacherous arena where survival is the ultimate prize. This mystical haven, once a sanctuary from evil, now serves as the backdrop for an otherworldly game orchestrated by Reno for the entertainment of the elite.
+    to the world, transforming it into a treacherous arena (The Zaubergrube Arena) where survival is the ultimate prize. This mystical haven, once a sanctuary from evil, now serves as the backdrop for an otherworldly game orchestrated by Reno for the entertainment of the elite.
    </p>
    <h4>
     The Illusionary Games
@@ -98,8 +98,186 @@
    </h4>
    <p class="subsection">
     As contestants strive for survival within the
-    <a href="../locations/landmarks/Zaubergrube_Caldera/Zaubergrube_Caldera.html">
+    <a href="../../locations/landmarks/Zaubergrube_Caldera/Zaubergrube_Caldera.html">
      Zaubergrube Caldera</a>, the illusionary arena leaves a dark imprint on the world. The tales of the Relicoligist's deadly games echo through the ages, a haunting legacy that intertwines with the ancient lore of the Caldera itself. The sanctuary-turned-arena stands as a testament to the ever-shifting nature of power, entertainment, and the perilous dance between them.
+   </p>
+  </div>
+  <hr/>
+  <div class="dnd-info">
+   <h3>
+    The Threat of The
+    <a href="../../creatures/monsters/Umbradraconis_Brastryx.html">
+     Umbradraconis Brastryx
+    </a>
+   </h3>
+   <p class="first-paragraph">
+    At some point during the players journay through the arena, the
+    <a href="../../creatures/monsters/Umbradraconis_Brastryx.html">
+     Umbradraconis Brastryx
+    </a>
+    will awaken. Upon awakening, the life in the Caldera will go silent as the
+    <a href="../../creatures/monsters/Umbradraconis_Brastryx.html">
+     Umbradraconis Brastryx
+    </a>
+    lets out a call sending chills down the spine of all the life in the area. As the players progress through the Caldera, a d6 can be used to determine how fast and where the
+    <a href="../../creatures/monsters/Umbradraconis_Brastryx.html">
+     Umbradraconis Brastryx
+    </a>
+    progresses. The below path can be used to determine the location.
+   </p>
+  </div>
+  <hr/>
+  <div class="dnd-image">
+   <h3>
+    The
+    <a href="../../creatures/monsters/Umbradraconis_Brastryx.html">
+     Umbradraconis Brastryx
+    </a>
+    Path
+   </h3>
+   <p>
+    <div class="dnd-image-info">
+     <div class="dnd-image-list">
+      <a href="img/Umbradraconis_Brastryx_Path.jpg">
+       <img alt="Image" src="img/Umbradraconis_Brastryx_Path.jpg"/>
+      </a>
+     </div>
+     <div class="dnd-image-source">
+      Source: Created by Antonius Torode
+     </div>
+     <div class="dnd-image-caption">
+      Caption: The path that the
+      <a href="../../creatures/monsters/Umbradraconis_Brastryx.html">
+       Umbradraconis Brastryx
+      </a>
+      takes throughout the
+      <a href="../../locations/landmarks/Zaubergrube_Caldera/Zaubergrube_Caldera.html">
+       Zaubergrube Caldera
+      </a>
+      .
+     </div>
+    </div>
+   </p>
+  </div>
+  <hr/>
+  <div class="dnd-info">
+   <h3>
+    The Arena's Challenges
+   </h3>
+   <p class="first-paragraph">
+    The battlemap below can be used as a cheatsheet for the various components in the arena.
+   </p>
+   <h4>
+    The Dangers
+   </h4>
+   <p class="subsection">
+    Various dangers loom in the arena
+   </p>
+   <p class="first-paragraph">
+    <ul>
+     <li>
+      The Green Dinosaur: The green dinosaur represents the nest of the
+      <a href="../../creatures/monsters/Umbradraconis_Brastryx.html">
+       Umbradraconis Brastryx
+      </a>
+      . If the players wander into the next before the beast has awaken, certain doom awaits them.
+     </li>
+     <li>
+      The Spiders: The spiders represent
+      <a href="../../creatures/insects/Mystic_Web_Spinners.html">
+       Mystic Web Spinners
+      </a>
+      . These creatures spin large webs high up in the trees and use the
+      <a href="../../items/plants/Whispering_Vines.html">
+       Whispering Vines
+      </a>
+      as cover to ambush their prey.
+     </li>
+     <li>
+      The Crododiles: TODO
+     </li>
+     <li>
+      The Poison Clouds: The poison clouds represent a dense area of forest that's crawling with poisonous insects. The most prominant insect is the purple leopard dart frog. This creature feeds on smaller insects and bugs and is extremely poisonous.
+     </li>
+     <li>
+      The Wolves: The wolves represent
+      <a href="../../creatures/animals/Echo_Howlers.html">
+       Echo Howlers
+      </a>
+      . These wolflike creatures can mimic sounds and hunt in packs.
+     </li>
+     <li>
+      The Yellow Caution Signs: These areas represent forests of sleeping willows. These willows can be deadly to the party and should be avoided.
+     </li>
+     <li>
+      The Flames: These flames represent an area of volcanic activity that should be tread carefully. This region is where the obelisks are which can teleport to players to the exit of the arena.
+     </li>
+     <li>
+      The Panthers: These represent areas where
+      <a href="../../creatures/animals/Lumina_Panthers.html">
+       Lumina Panthers
+      </a>
+      can be found. These creatures are mostly invisible and will sneak up on the players if they drop their guard.
+     </li>
+     <li>
+      The Snake: The snake represents a somewhat open area. This area is home to small reptiles (most of which are poisonous).
+     </li>
+     <li>
+      The Whirlpool: The whirlpool represents the rapids surrounding the island in the center of the arena. This island is the key to escape but cannot be accessed except via teleportation from an obelisk aroun the arena.
+     </li>
+    </ul>
+   </p>
+   <h4>
+    The Safehavens
+   </h4>
+   <p class="subsection">
+    Throughout the arena, various things are in place to help the players, as well as various creatures that would choose to cooperate with the players if they acted in kind.
+   </p>
+   <p class="first-paragraph">
+    <ul>
+     <li>
+      The Tiki Mask: This represents a closed in rocky area where the
+      <a href="../../creatures/humanoids/Zentikis.html">
+       Zentikis
+      </a>
+      live. These humanoid creatures will not harm the players unless they feel threatened. These creatures can be a valuable aid for the players to learn about the Caldera they are in.
+     </li>
+     <li>
+      The Food Icons: These represent areas of forest where food is abundantly found. The primary food here is the
+      <a href="../../items/consumables/food/Moonstone_Fruits.html">
+       Moonstone Fruits</a>, which can both provide nourishment and beneficial enhancements to the players.
+     </li>
+     <li>
+      The Health Icons: These areas represent places where antivenom's can be found. These are used for curing the purple leopard dart frog alements as well as the various reptiles.
+     </li>
+     <li>
+      The Yellow Birds: These are Telomney Falcons, an avian species that lives in the high cliffs above the trees. These creatures will not harm the players unless provoked and could potentially provide assistance to them if presented with food.
+     </li>
+     <li>
+      The medicine Bottles: These bottles represent herbs and other plants that are used as remedies and can heal the party.
+     </li>
+    </ul>
+   </p>
+  </div>
+  <hr/>
+  <div class="dnd-image">
+   <h3>
+    The Arena Cheatsheet
+   </h3>
+   <p>
+    <div class="dnd-image-info">
+     <div class="dnd-image-list">
+      <a href="img/Zaubergrube_Arena_Challenges.jpg">
+       <img alt="Image" src="img/Zaubergrube_Arena_Challenges.jpg"/>
+      </a>
+     </div>
+     <div class="dnd-image-source">
+      Source: Created by Antonius Torode
+     </div>
+     <div class="dnd-image-caption">
+      Caption: The various challenges or key features for the players to bout throughout the Zaubergrube Arena.
+     </div>
+    </div>
    </p>
   </div>
   <hr/>
